RESOLVED FIXED227927
libpas executable-allocator should reserve more than 256KB for non-fail region at least
https://bugs.webkit.org/show_bug.cgi?id=227927
Summary libpas executable-allocator should reserve more than 256KB for non-fail regio...
Ryan Haddad
Reported 2021-07-13 16:05:09 PDT
~31 JSC tests are failing on Big Sur M1 bots after https://trac.webkit.org/changeset/279867/webkit Release: https://build.webkit.org/#/builders/102/builds/2224 Debug: https://build.webkit.org/#/builders/100/builds/562 stress/fold-multi-get-by-offset-to-get-by-offset-without-folding-the-structure-check.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1120 bytes. stress/SharedArrayBuffer-opt.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 672 bytes. stress/to-number-intrinsic-value-profiling.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1216 bytes. stress/prune-multi-put-by-offset-replace-or-transition-variant.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1120 bytes. stress/exit-from-getter.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1120 bytes. stress/istypedarrayview-intrinsic.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 96 bytes. stress/inlined-constructor-this-liveness.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1184 bytes. stress/poly-proto-setter-changes-setter-2.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 7520 bytes. stress/arguments-inlined-exit.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1344 bytes. stress/sink-to-impossible-multi-get-by-offset-on-prototypes.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1184 bytes. stress/private-method-check-structure-miss.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1024 bytes. stress/get-private-name-cache-failure.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 6944 bytes. stress/arguments-inlined-exit-strict-mode-fixed.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1408 bytes. stress/sink-multigetbyoffset.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1152 bytes. stress/super-get-by-id.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1056 bytes. stress/regexp-exec-effect-after-exception.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1024 bytes. stress/poly-proto-setter-adds-setter-in-middle.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 6336 bytes. stress/poly-proto-setter-changes-setter.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 7648 bytes. stress/regress-189317.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 288 bytes. stress/proxy-set-prototype-of.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 576 bytes. stress/call-apply-exponential-bytecode-size.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1152 bytes. stress/global-isNaN-basics.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1152 bytes. stress/get-my-argument-by-val-inlined-no-formal-parameters.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1280 bytes. stress/delete-property-poly-proto.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 6976 bytes. stress/simplify-varargs-mandatory-minimum-smaller-than-limit.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 2080 bytes. stress/Number-isNaN-basics.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1120 bytes. stress/array-push-nan-to-double-array.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1120 bytes. stress/private-in.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 480 bytes. stress/fold-multi-put-by-offset-to-put-by-offset-without-folding-the-structure-check.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 1120 bytes. microbenchmarks/load-varargs-elimination.js.ftl-no-cjit-small-pool: Ran out of executable memory while allocating 2208 bytes.
Attachments
Patch (10.49 KB, patch)
2021-07-13 21:15 PDT, Yusuke Suzuki
ews-feeder: commit-queue-
Patch (10.46 KB, patch)
2021-07-13 21:20 PDT, Yusuke Suzuki
no flags
Patch (11.24 KB, patch)
2021-07-13 21:27 PDT, Yusuke Suzuki
no flags
Patch (11.24 KB, patch)
2021-07-13 21:28 PDT, Yusuke Suzuki
no flags
Patch (12.95 KB, patch)
2021-07-13 21:54 PDT, Yusuke Suzuki
no flags
Patch (13.12 KB, patch)
2021-07-13 21:58 PDT, Yusuke Suzuki
no flags
Radar WebKit Bug Importer
Comment 1 2021-07-13 16:05:43 PDT
Yusuke Suzuki
Comment 2 2021-07-13 21:15:52 PDT
Yusuke Suzuki
Comment 3 2021-07-13 21:20:31 PDT
Yusuke Suzuki
Comment 4 2021-07-13 21:27:31 PDT
Yusuke Suzuki
Comment 5 2021-07-13 21:28:16 PDT
Yusuke Suzuki
Comment 6 2021-07-13 21:54:19 PDT
Yusuke Suzuki
Comment 7 2021-07-13 21:58:51 PDT
EWS
Comment 8 2021-07-14 11:31:18 PDT
Committed r279913 (239662@main): <https://commits.webkit.org/239662@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433485 [details].
Note You need to log in before you can comment on or make changes to this bug.