Source/JavaScriptCore/jit/ExecutableAllocator.cpp
@@ -124,6 +124,13 @@ static constexpr double executablePoolReservationFraction = 0.15;
 static constexpr double executablePoolReservationFraction = 0.25;
 #endif
 
+#if USE(LIBPAS_JIT_HEAP)
+// This size is derived from jit_config's medium table size.
+static constexpr size_t minimumExecutablePoolReservationSize = 256 * KB;
+static_assert(fixedExecutableMemoryPoolSize * executablePoolReservationFraction >= minimumExecutablePoolReservationSize);
+static_assert(fixedExecutableMemoryPoolSize < 4 * GB, "ExecutableMemoryHandle assumes it is less than 4GB");
+#endif
+
 static bool isJITEnabled()
 {
     bool jitEnabled = !g_jscConfig.jitDisabled;
@@ -340,6 +347,10 @@ static ALWAYS_INLINE JITReservation initializeJITPageReservation()
 
     if (Options::jitMemoryReservationSize()) {
         reservation.size = Options::jitMemoryReservationSize();
+#if USE(LIBPAS_JIT_HEAP)
+        if (reservation.size * executablePoolReservationFraction < minimumExecutablePoolReservationSize)
+            reservation.size += minimumExecutablePoolReservationSize;
+#endif
 
 #if ENABLE(JUMP_ISLANDS)
         // If asked for a reservation smaller than island size, assume that we want that size allocation
@@ -444,7 +455,9 @@ public:
                     m_allocators[i].m_end = tagCodePtr<ExecutableMemoryPtrTag>(bitwise_cast<void*>(reservationEnd));
                 }
 
-                m_allocators[i].addFreshFreeSpace(bitwise_cast<void*>(m_allocators[i].start()), m_allocators[i].allocatorSize());
+                size_t sizeInBytes = m_allocators[i].allocatorSize();
+                m_allocators[i].addFreshFreeSpace(bitwise_cast<void*>(m_allocators[i].start()), sizeInBytes);
+                m_bytesReserved += sizeInBytes;
 
                 RELEASE_ASSERT(m_allocators[i].allocatorSize() < regionSize);
                 RELEASE_ASSERT(m_allocators[i].islandBegin() > m_allocators[i].start());
@@ -454,9 +467,7 @@ public:
             }
 #else
             m_allocator.addFreshFreeSpace(reservation.base, reservation.size);
-#if !USE(LIBPAS_JIT_HEAP)
-            ASSERT(bytesReserved() == reservation.size); // Since our executable memory is fixed-sized, bytesReserved is never changed after initialization.
-#endif
+            m_bytesReserved += reservation.size;
 #endif
         }
     }
@@ -474,7 +485,10 @@ public:
     RefPtr<ExecutableMemoryHandle> allocate(size_t sizeInBytes)
     {
 #if USE(LIBPAS_JIT_HEAP)
-        return ExecutableMemoryHandle::createImpl(sizeInBytes);
+        auto result = ExecutableMemoryHandle::createImpl(sizeInBytes);
+        if (LIKELY(result))
+            m_bytesAllocated.fetch_add(result->sizeInBytes(), std::memory_order_relaxed);
+        return result;
 #elif ENABLE(JUMP_ISLANDS)
         Locker locker { getLock() };
 
@@ -499,24 +513,46 @@ public:
 
     Lock& getLock() WTF_RETURNS_LOCK(m_lock) { return m_lock; }
 
-#if !USE(LIBPAS_JIT_HEAP)
-    // Non atomic
-    size_t bytesAllocated() 
+#if USE(LIBPAS_JIT_HEAP)
+    void shrinkBytesAllocated(size_t oldSizeInBytes, size_t newSizeInBytes)
     {
+        m_bytesAllocated.fetch_add(newSizeInBytes - oldSizeInBytes, std::memory_order_relaxed);
+    }
+#endif
+
+    // Non atomic
+    size_t bytesAllocated()
+    {
+#if USE(LIBPAS_JIT_HEAP)
+        return m_bytesAllocated.load(std::memory_order_relaxed);
+#else
         size_t result = 0;
         forEachAllocator([&] (Allocator& allocator) {
             result += allocator.bytesAllocated();
         });
         return result;
+#endif
     }
-    size_t bytesReserved() 
+
+    size_t bytesReserved() const
     {
-        size_t result = 0;
-        forEachAllocator([&] (Allocator& allocator) {
-            result += allocator.bytesReserved();
-        });
-        return result;
+        return m_bytesReserved;
     }
+
+    size_t bytesAvailable()
+    {
+        size_t bytesReserved = this->bytesReserved();
+#if USE(LIBPAS_JIT_HEAP)
+        size_t nonAvailableSize = static_cast<size_t>(bytesReserved * executablePoolReservationFraction);
+        if (nonAvailableSize < minimumExecutablePoolReservationSize)
+            return bytesReserved - minimumExecutablePoolReservationSize;
+        return bytesReserved - nonAvailableSize;
+#else
+        return static_cast<size_t>(bytesReserved * (1 - executablePoolReservationFraction));
+#endif
+    }
+
+#if !USE(LIBPAS_JIT_HEAP)
     size_t bytesCommitted()
     {
         size_t result = 0;
@@ -563,8 +599,9 @@ public:
 #endif // !USE(LIBPAS_JIT_HEAP)
 
 #if USE(LIBPAS_JIT_HEAP)
-    void handleWillBeReleased(ExecutableMemoryHandle& handle)
+    void handleWillBeReleased(ExecutableMemoryHandle& handle, size_t sizeInBytes)
     {
+        m_bytesAllocated.fetch_sub(sizeInBytes, std::memory_order_relaxed);
 #if ENABLE(JUMP_ISLANDS)
         if (m_islandsForJumpSourceLocation.isEmpty())
             return;
@@ -923,6 +960,10 @@ private:
 #else
     Allocator m_allocator;
 #endif // ENABLE(JUMP_ISLANDS)
+    size_t m_bytesReserved { 0 };
+#if USE(LIBPAS_JIT_HEAP)
+    std::atomic<size_t> m_bytesAllocated { 0 };
+#endif
 };
 
 // Keep this pointer in a mutable global variable to help Leaks find it.
@@ -945,28 +986,20 @@ bool ExecutableAllocator::isValid() const
 
 bool ExecutableAllocator::underMemoryPressure()
 {
-#if USE(LIBPAS_JIT_HEAP)
-    return Base::underMemoryPressure();
-#else // USE(LIBPAS_JIT_HEAP) -> so start of !USE(LIBPAS_JIT_HEAP)
     FixedVMPoolExecutableAllocator* allocator = g_jscConfig.fixedVMPoolExecutableAllocator;
     if (!allocator)
         return Base::underMemoryPressure();
     return allocator->bytesAllocated() > allocator->bytesReserved() / 2;
-#endif // USE(LIBPAS_JIT_HEAP) -> so end of !USE(LIBPAS_JIT_HEAP)
 }
 
 double ExecutableAllocator::memoryPressureMultiplier(size_t addedMemoryUsage)
 {
-#if USE(LIBPAS_JIT_HEAP)
-    return Base::memoryPressureMultiplier(addedMemoryUsage);
-#else // USE(LIBPAS_JIT_HEAP) -> so start of !USE(LIBPAS_JIT_HEAP)
     FixedVMPoolExecutableAllocator* allocator = g_jscConfig.fixedVMPoolExecutableAllocator;
     if (!allocator)
         return Base::memoryPressureMultiplier(addedMemoryUsage);
     ASSERT(allocator->bytesAllocated() <= allocator->bytesReserved());
     size_t bytesAllocated = allocator->bytesAllocated() + addedMemoryUsage;
-    size_t bytesAvailable = static_cast<size_t>(
-        allocator->bytesReserved() * (1 - executablePoolReservationFraction));
+    size_t bytesAvailable = allocator->bytesAvailable();
     if (bytesAllocated >= bytesAvailable)
         bytesAllocated = bytesAvailable;
     double result = 1.0;
@@ -976,7 +1009,6 @@ double ExecutableAllocator::memoryPressureMultiplier(size_t addedMemoryUsage)
     if (result < 1.0)
         result = 1.0;
     return result;
-#endif // USE(LIBPAS_JIT_HEAP) -> so end of !USE(LIBPAS_JIT_HEAP)
 }
 
 RefPtr<ExecutableMemoryHandle> ExecutableAllocator::allocate(size_t sizeInBytes, JITCompilationEffort effort)
@@ -1000,19 +1032,16 @@ RefPtr<ExecutableMemoryHandle> ExecutableAllocator::allocate(size_t sizeInBytes,
         && doExecutableAllocationFuzzingIfEnabled() == PretendToFailExecutableAllocation)
         return nullptr;
 
-#if !USE(LIBPAS_JIT_HEAP)
     if (effort == JITCompilationCanFail) {
         // Don't allow allocations if we are down to reserve.
         size_t bytesAllocated = allocator->bytesAllocated() + sizeInBytes;
-        size_t bytesAvailable = static_cast<size_t>(
-            allocator->bytesReserved() * (1 - executablePoolReservationFraction));
+        size_t bytesAvailable = allocator->bytesAvailable();
         if (bytesAllocated > bytesAvailable) {
             if (Options::logExecutableAllocation())
                 dataLog("Allocation failed because bytes allocated ", bytesAllocated,  " > ", bytesAvailable, " bytes available.\n");
             return nullptr;
         }
     }
-#endif // !USE(LIBPAS_JIT_HEAP)
 
     RefPtr<ExecutableMemoryHandle> result = allocator->allocate(sizeInBytes);
     if (!result) {
@@ -1197,24 +1226,25 @@ RefPtr<ExecutableMemoryHandle> ExecutableMemoryHandle::createImpl(size_t sizeInB
     void* key = jit_heap_try_allocate(sizeInBytes);
     if (!key)
         return nullptr;
-    return adoptRef(new ExecutableMemoryHandle(MemoryPtr::makeFromRawPointer(key)));
+    return adoptRef(new ExecutableMemoryHandle(MemoryPtr::makeFromRawPointer(key), jit_heap_get_size(key)));
 }
 
 ExecutableMemoryHandle::~ExecutableMemoryHandle()
 {
     FixedVMPoolExecutableAllocator* allocator = g_jscConfig.fixedVMPoolExecutableAllocator;
-    allocator->handleWillBeReleased(*this);
+    allocator->handleWillBeReleased(*this, sizeInBytes());
     jit_heap_deallocate(key());
-}
-
-size_t ExecutableMemoryHandle::sizeInBytes() const
-{
-    return jit_heap_get_size(key());
 }
 
 void ExecutableMemoryHandle::shrink(size_t newSizeInBytes)
 {
+    size_t oldSizeInBytes = sizeInBytes();
     jit_heap_shrink(key(), newSizeInBytes);
+    m_sizeInBytes = jit_heap_get_size(key());
+    if (oldSizeInBytes != sizeInBytes()) {
+        FixedVMPoolExecutableAllocator* allocator = g_jscConfig.fixedVMPoolExecutableAllocator;
+        allocator->shrinkBytesAllocated(oldSizeInBytes, sizeInBytes());
+    }
 }
 #endif
 
